Landscape is finished in level 1

--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -124,7 +124,8 @@ MirrorOp=0
 NewLandscapeMaterialName=
 ImportLandscape_AlphamapType=0
 ShowUnusedLayers=True
-ToolStrength=0.083810
+ToolStrength=0.100000
+ErodeSurfaceThickness=512
 
 [FoliageEdit]
 WindowPosition=-1,-1,284,400
