Land material rock paint is stuck the program

--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -194,7 +194,7 @@ StaticMeshActor.Replication=True
 StaticMeshActor.Actor=True
 LandscapeEditorObject.New Landscape=True
 LandscapeEditorObject.LandscapeEditor=True
-LandscapeEditorObject.Brush Settings=True
+LandscapeEditorObject.Brush Settings=False
 LandscapeEditorObject.Tool Settings=True
 LandscapeEditorObject.Target Layers=True
 PaintBrushSettings.Brush=True
@@ -1022,9 +1022,9 @@ PortalProxies.TimeStamp=2019.03.17-23.42.42
 PortalProxies.LastCompileMethod=Unknown
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Materials/M_Land
-MRUItem1=/Game/Materials/M_Landscape
-MRUItem2=/Game/Maps/Level_Chapter01
+MRUItem0=/Game/Maps/Level_Chapter01
+MRUItem1=/Game/Materials/M_Land
+MRUItem2=/Game/Materials/M_Landscape
 MRUItem3=/Game/Materials/M_Landscape_Practise_Inst
 MRUItem4=/Game/Materials/M_Landscape_Practise
 
