Cabin Asset impoted and materials created

--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -170,7 +170,7 @@ AssetPropertyPicker.CurrentViewType=0
 LastLevel=/Game/Maps/Level_Chapter01
 
 [AssetEditorManager]
-CleanShutdown=True
+CleanShutdown=False
 
 [DetailCategories]
 BP_Sky_Sphere_C.TransformCommon=True
@@ -346,6 +346,21 @@ MaterialExpressionLandscapeLayerCoords.MaterialExpression=True
 MaterialExpression.MaterialExpression=True
 MaterialExpressionLandscapeLayerBlend.MaterialExpressionLandscapeLayerBlend=True
 MaterialExpressionLandscapeLayerBlend.MaterialExpression=True
+FbxImportUI.Mesh=True
+FbxImportUI.Transform=True
+FbxImportUI.Miscellaneous=True
+FbxImportUI.LodSettings=True
+FbxImportUI.Material=True
+FbxImportUI.FbxFileInformation=False
+StaticMesh.StaticMeshMaterials=True
+StaticMesh.LODCustomMode=True
+StaticMesh.LOD0=True
+StaticMesh.LodSettings=True
+StaticMesh.StaticMesh=True
+StaticMesh.Collision=True
+StaticMesh.ImportSettings=True
+StaticMesh.EditableMesh=True
+StaticMesh.Navigation=True
 
 [PlacementMode]
 RecentlyPlaced=/Script/Engine.TriggerBox;/Engine/Transient.ActorFactoryTriggerBox_0
@@ -1021,11 +1036,20 @@ PortalProxies.TimeStamp=2019.03.17-23.42.42
 PortalProxies.LastCompileMethod=Unknown
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Materials/M_Land
-MRUItem1=/Game/Maps/Level_Chapter01
-MRUItem2=/Game/Materials/M_Landscape
-MRUItem3=/Game/Materials/M_Landscape_Practise_Inst
-MRUItem4=/Game/Materials/M_Landscape_Practise
+MRUItem0=/Engine/EngineMaterials/WorldGridMaterial
+MRUItem1=/Game/Materials/M_Window
+MRUItem2=/Game/Materials/M_Chimney
+MRUItem3=/Game/Materials/M_Door
+MRUItem4=/Game/Materials/M_Tiles
+MRUItem5=/Game/Materials/M_Beam
+MRUItem6=/Game/Materials/M_Lampert
+MRUItem7=/Game/Materials/M_Slats
+MRUItem8=/Game/Geometry/Cabin
+MRUItem9=/Game/Maps/Level_Chapter01
+MRUItem10=/Game/Materials/M_Land
+MRUItem11=/Game/Materials/M_Landscape
+MRUItem12=/Game/Materials/M_Landscape_Practise_Inst
+MRUItem13=/Game/Materials/M_Landscape_Practise
 
 [MessageLog]
 LastLogListing=PIE
@@ -1038,6 +1062,15 @@ bUseUnsortedMenus=False
 /Game/Materials/M_Landscape_Practise.M_Landscape_Practise=0
 /Game/Materials/M_Landscape.M_Landscape=0
 /Game/Materials/M_Land.M_Land=0
+/Game/Materials/M_Slats.M_Slats=0
+/Game/Materials/M_Beam.M_Beam=0
+/Game/Materials/M_Tiles.M_Tiles=0
+/Game/Materials/M_Chimney.M_Chimney=0
+/Game/Materials/M_Lampert.M_Lampert=0
+/Game/Materials/M_Door.M_Door=0
+/Game/Materials/M_Window.M_Window=0
+/Engine/EngineMaterials/WorldGridMaterial.WorldGridMaterial=0
+/Game/Geometry/Cabin.Cabin=0
 
 [MaterialInstanceEditor]
 bShowGrid=False
@@ -1088,5 +1121,93 @@ PrimType=1
 MaterialExpressionLandscapeLayerBlend="\"Object.Layers\" "
 MaterialExpression=
 Object=
+
+[/Script/UnrealEd.FbxImportUI]
+bImportMaterials=False
+bImportTextures=False
+LodDistance0=0.000000
+LodDistance1=0.000000
+LodDistance2=0.000000
+LodDistance3=0.000000
+LodDistance4=0.000000
+LodDistance5=0.000000
+LodDistance6=0.000000
+LodDistance7=0.000000
+
+[FBX_Import_UI_Option_FbxStaticMeshImportData]
+StaticMeshLODGroup=None
+VertexColorImportOption=Ignore
+VertexOverrideColor=(B=255,G=255,R=255,A=255)
+bGenerateLightmapUVs=True
+bOneConvexHullPerUCX=True
+bAutoGenerateCollision=True
+bCombineMeshes=False
+bTransformVertexToAbsolute=True
+bBakePivotInVertex=False
+bImportMeshLODs=False
+NormalImportMethod=FBXNIM_ImportNormals
+NormalGenerationMethod=MikkTSpace
+ImportTranslation=(X=0.000000,Y=0.000000,Z=0.000000)
+ImportRotation=(Pitch=0.000000,Yaw=0.000000,Roll=0.000000)
+ImportUniformScale=1.000000
+bConvertScene=True
+bForceFrontXAxis=False
+bConvertSceneUnit=False
+
+[FBX_Import_UI_Option_FbxSkeletalMeshImportData]
+bUseT0AsRefPose=False
+bPreserveSmoothingGroups=True
+bImportMeshesInBoneHierarchy=True
+bImportMorphTargets=False
+ThresholdPosition=0.000020
+ThresholdTangentNormal=0.000020
+ThresholdUV=0.000977
+bTransformVertexToAbsolute=True
+bBakePivotInVertex=False
+bImportMeshLODs=False
+NormalImportMethod=FBXNIM_ComputeNormals
+NormalGenerationMethod=MikkTSpace
+ImportTranslation=(X=0.000000,Y=0.000000,Z=0.000000)
+ImportRotation=(Pitch=0.000000,Yaw=0.000000,Roll=0.000000)
+ImportUniformScale=1.000000
+bConvertScene=True
+bForceFrontXAxis=False
+bConvertSceneUnit=False
+
+[FBX_Import_UI_Option_FbxAnimSequenceImportData]
+AnimationLength=FBXALIT_ExportedTime
+bUseDefaultSampleRate=False
+CustomSampleRate=0
+bImportCustomAttribute=True
+bImportBoneTracks=True
+bSetMaterialDriveParameterOnCustomAttribute=False
+MaterialCurveSuffixes=_mat
+bRemoveRedundantKeys=True
+bDeleteExistingMorphTargetCurves=False
+bDoNotImportCurveWithZero=True
+bPreserveLocalTransform=False
+ImportTranslation=(X=0.000000,Y=0.000000,Z=0.000000)
+ImportRotation=(Pitch=0.000000,Yaw=0.000000,Roll=0.000000)
+ImportUniformScale=1.000000
+bConvertScene=True
+bForceFrontXAxis=False
+bConvertSceneUnit=False
+
+[FBX_Import_UI_Option_FbxTextureImportData]
+bInvertNormalMaps=False
+MaterialSearchLocation=Local
+BaseMaterialName=None
+BaseColorName=
+BaseDiffuseTextureName=
+BaseNormalTextureName=
+BaseEmissiveColorName=
+BaseEmmisiveTextureName=
+BaseSpecularTextureName=
+ImportTranslation=(X=0.000000,Y=0.000000,Z=0.000000)
+ImportRotation=(Pitch=0.000000,Yaw=0.000000,Roll=0.000000)
+ImportUniformScale=1.000000
+bConvertScene=True
+bForceFrontXAxis=False
+bConvertSceneUnit=False
 
 
