Cabin fixed and path created in the level

--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -110,7 +110,7 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettin
 MRUItem0=/Game/Maps/Level_Chapter01
 
 [LandscapeEdit]
-BrushRadius=1706.414795
+BrushRadius=463.473328
 AlphaBrushAutoRotate=True
 WorldSpacePatternBrushSettings.Origin=X=0.000 Y=0.000
 WorldSpacePatternBrushSettings.bCenterTextureOnOrigin=False
@@ -363,6 +363,7 @@ StaticMesh.EditableMesh=True
 StaticMesh.Navigation=True
 
 [PlacementMode]
+RecentlyPlaced=/Game/Geometry/Cabin.Cabin;
 RecentlyPlaced=/Script/Engine.TriggerBox;/Engine/Transient.ActorFactoryTriggerBox_0
 RecentlyPlaced=/Script/Engine.Character;/Engine/Transient.ActorFactoryCharacter_0
 RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
