Rock and materials created and added in the level

--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -361,8 +361,11 @@ StaticMesh.Collision=True
 StaticMesh.ImportSettings=True
 StaticMesh.EditableMesh=True
 StaticMesh.Navigation=True
+MaterialExpressionTextureCoordinate.MaterialExpressionTextureCoordinate=True
+MaterialExpressionTextureCoordinate.MaterialExpression=True
 
 [PlacementMode]
+RecentlyPlaced=/Game/Geometry/Rock.Rock;
 RecentlyPlaced=/Game/Geometry/Cabin.Cabin;
 RecentlyPlaced=/Script/Engine.TriggerBox;/Engine/Transient.ActorFactoryTriggerBox_0
 RecentlyPlaced=/Script/Engine.Character;/Engine/Transient.ActorFactoryCharacter_0
@@ -1037,20 +1040,22 @@ PortalProxies.TimeStamp=2019.03.17-23.42.42
 PortalProxies.LastCompileMethod=Unknown
 
 [ContentBrowserRecent]
-MRUItem0=/Engine/EngineMaterials/WorldGridMaterial
-MRUItem1=/Game/Materials/M_Window
-MRUItem2=/Game/Materials/M_Chimney
-MRUItem3=/Game/Materials/M_Door
-MRUItem4=/Game/Materials/M_Tiles
-MRUItem5=/Game/Materials/M_Beam
-MRUItem6=/Game/Materials/M_Lampert
-MRUItem7=/Game/Materials/M_Slats
-MRUItem8=/Game/Geometry/Cabin
-MRUItem9=/Game/Maps/Level_Chapter01
-MRUItem10=/Game/Materials/M_Land
-MRUItem11=/Game/Materials/M_Landscape
-MRUItem12=/Game/Materials/M_Landscape_Practise_Inst
-MRUItem13=/Game/Materials/M_Landscape_Practise
+MRUItem0=/Game/Materials/M_Rock
+MRUItem1=/Game/Geometry/Rock
+MRUItem2=/Engine/EngineMaterials/WorldGridMaterial
+MRUItem3=/Game/Materials/M_Window
+MRUItem4=/Game/Materials/M_Chimney
+MRUItem5=/Game/Materials/M_Door
+MRUItem6=/Game/Materials/M_Tiles
+MRUItem7=/Game/Materials/M_Beam
+MRUItem8=/Game/Materials/M_Lampert
+MRUItem9=/Game/Materials/M_Slats
+MRUItem10=/Game/Geometry/Cabin
+MRUItem11=/Game/Maps/Level_Chapter01
+MRUItem12=/Game/Materials/M_Land
+MRUItem13=/Game/Materials/M_Landscape
+MRUItem14=/Game/Materials/M_Landscape_Practise_Inst
+MRUItem15=/Game/Materials/M_Landscape_Practise
 
 [MessageLog]
 LastLogListing=PIE
@@ -1072,6 +1077,8 @@ bUseUnsortedMenus=False
 /Game/Materials/M_Window.M_Window=0
 /Engine/EngineMaterials/WorldGridMaterial.WorldGridMaterial=0
 /Game/Geometry/Cabin.Cabin=0
+/Game/Materials/M_Rock.M_Rock=0
+/Game/Geometry/Rock.Rock=0
 
 [MaterialInstanceEditor]
 bShowGrid=False
@@ -1210,5 +1217,8 @@ ImportUniformScale=1.000000
 bConvertScene=True
 bForceFrontXAxis=False
 bConvertSceneUnit=False
+
+[SelectionDetails]
+PreserveScaleRatio=True
 
 
