Grass design finished

--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -139,7 +139,7 @@ PaletteThumbnailScale=0.300000
 
 [DetailCustomWidgetExpansion]
 LandscapeEditorObject=LandscapeEditorObject.Target Layers.TargetLayers,
-MaterialEditorInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Scalar Parameter Values,
+MaterialEditorInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Scalar Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Vector Parameter Values,
 MaterialInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Scalar Parameter Values,
 
 [ContentBrowser]
@@ -172,7 +172,7 @@ AssetPropertyPicker.CurrentViewType=0
 LastLevel=/Game/Maps/Level_Chapter01
 
 [AssetEditorManager]
-CleanShutdown=True
+CleanShutdown=False
 
 [DetailCategories]
 BP_Sky_Sphere_C.TransformCommon=True
@@ -311,7 +311,7 @@ AtmosphericFog.Cooking=True
 AtmosphericFog.Replication=True
 AtmosphericFog.Actor=True
 PreviewMaterial.PhysicalMaterial=False
-PreviewMaterial.Material=False
+PreviewMaterial.Material=True
 PreviewMaterial.Translucency=False
 PreviewMaterial.TranslucencySelfShadowing=False
 PreviewMaterial.Usage=False
@@ -365,8 +365,16 @@ StaticMesh.EditableMesh=True
 StaticMesh.Navigation=True
 MaterialExpressionTextureCoordinate.MaterialExpressionTextureCoordinate=True
 MaterialExpressionTextureCoordinate.MaterialExpression=True
+MaterialExpressionVectorParameter.General=True
+MaterialExpressionVectorParameter.MaterialExpressionVectorParameter=True
+MaterialExpressionVectorParameter.MaterialExpression=True
+MaterialExpressionPerInstanceFadeAmount.MaterialExpression=True
+MaterialExpressionMaterialFunctionCall.MaterialExpressionMaterialFunctionCall=True
+MaterialExpressionMaterialFunctionCall.MaterialExpression=True
+MaterialExpressionVertexColor.MaterialExpression=True
 
 [PlacementMode]
+RecentlyPlaced=/Game/Geometry/GrassClump.GrassClump;
 RecentlyPlaced=/Game/Geometry/Rock.Rock;
 RecentlyPlaced=/Game/Geometry/firelogs.firelogs;
 RecentlyPlaced=/Game/Geometry/Cabin.Cabin;
@@ -1045,30 +1053,34 @@ StaticMeshEditor.TimeStamp=2019.03.17-23.42.51
 StaticMeshEditor.LastCompileMethod=Unknown
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Materials/M_BurnedWood
-MRUItem1=/Game/Geometry/firelogs
-MRUItem2=/Game/Materials/M_Rock
-MRUItem3=/Game/Geometry/Rock
-MRUItem4=/Engine/EngineMaterials/WorldGridMaterial
-MRUItem5=/Game/Materials/M_Window
-MRUItem6=/Game/Materials/M_Chimney
-MRUItem7=/Game/Materials/M_Door
-MRUItem8=/Game/Materials/M_Tiles
-MRUItem9=/Game/Materials/M_Beam
-MRUItem10=/Game/Materials/M_Lampert
-MRUItem11=/Game/Materials/M_Slats
-MRUItem12=/Game/Geometry/Cabin
-MRUItem13=/Game/Maps/Level_Chapter01
-MRUItem14=/Game/Materials/M_Land
-MRUItem15=/Game/Materials/M_Landscape
-MRUItem16=/Game/Materials/M_Landscape_Practise_Inst
-MRUItem17=/Game/Materials/M_Landscape_Practise
+MRUItem0=/Game/Materials/M_Grass_Inst
+MRUItem1=/Game/Materials/M_GrassMaster
+MRUItem2=/Game/Geometry/GrassClump
+MRUItem3=/Game/Maps/Level_Chapter01
+MRUItem4=/Game/Materials/M_BurnedWood
+MRUItem5=/Game/Geometry/firelogs
+MRUItem6=/Game/Materials/M_Rock
+MRUItem7=/Game/Geometry/Rock
+MRUItem8=/Engine/EngineMaterials/WorldGridMaterial
+MRUItem9=/Game/Materials/M_Window
+MRUItem10=/Game/Materials/M_Chimney
+MRUItem11=/Game/Materials/M_Door
+MRUItem12=/Game/Materials/M_Tiles
+MRUItem13=/Game/Materials/M_Beam
+MRUItem14=/Game/Materials/M_Lampert
+MRUItem15=/Game/Materials/M_Slats
+MRUItem16=/Game/Geometry/Cabin
+MRUItem17=/Game/Materials/M_Land
+MRUItem18=/Game/Materials/M_Landscape
+MRUItem19=/Game/Materials/M_Landscape_Practise_Inst
 
 [MessageLog]
 LastLogListing=PIE
 
 [/Script/UnrealEd.MaterialEditorOptions]
 bUseUnsortedMenus=False
+bRealtimeExpressionViewport=True
+bAlwaysRefreshAllPreviews=True
 
 [AssetEditorToolkitTabLocation]
 /Game/Materials/M_Landscape_Practise_Inst.M_Landscape_Practise_Inst=1
@@ -1088,11 +1100,14 @@ bUseUnsortedMenus=False
 /Game/Geometry/Rock.Rock=0
 /Game/Geometry/firelogs.firelogs=0
 /Game/Materials/M_BurnedWood.M_BurnedWood=0
+/Game/Materials/M_Grass_Inst.M_Grass_Inst=1
+/Game/Materials/M_GrassMaster.M_GrassMaster=0
+/Game/Geometry/GrassClump.GrassClump=0
 
 [MaterialInstanceEditor]
 bShowGrid=False
 bDrawGrid=False
-PrimType=1
+PrimType=3
 
 [/Script/UnrealEd.MaterialStatsOptions]
 bPlatformUsed[0]=1
@@ -1132,7 +1147,7 @@ bMaterialQualityUsed[1]=1
 bMaterialQualityUsed[2]=0
 
 [MaterialEditor]
-PrimType=1
+PrimType=3
 
 [DetailPropertyExpansion]
 MaterialExpressionLandscapeLayerBlend="\"Object.Layers\" "
@@ -1157,7 +1172,7 @@ VertexColorImportOption=Ignore
 VertexOverrideColor=(B=255,G=255,R=255,A=255)
 bGenerateLightmapUVs=True
 bOneConvexHullPerUCX=True
-bAutoGenerateCollision=True
+bAutoGenerateCollision=False
 bCombineMeshes=False
 bTransformVertexToAbsolute=True
 bBakePivotInVertex=False
