Grass paint error

--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -136,6 +136,10 @@ bShowPaletteItemDetails=True
 bShowPaletteItemTooltips=True
 ActivePaletteViewMode=0
 PaletteThumbnailScale=0.300000
+Radius=1000.000000
+PaintDensity=1.000000
+bFilterStaticMesh=False
+bFilterBSP=False
 
 [DetailCustomWidgetExpansion]
 LandscapeEditorObject=LandscapeEditorObject.Target Layers.TargetLayers,
@@ -372,6 +376,12 @@ MaterialExpressionPerInstanceFadeAmount.MaterialExpression=True
 MaterialExpressionMaterialFunctionCall.MaterialExpressionMaterialFunctionCall=True
 MaterialExpressionMaterialFunctionCall.MaterialExpression=True
 MaterialExpressionVertexColor.MaterialExpression=True
+FoliageType_InstancedStaticMesh.Mesh=True
+FoliageType_InstancedStaticMesh.Painting=True
+FoliageType_InstancedStaticMesh.Placement=True
+FoliageType_InstancedStaticMesh.InstanceSettings=True
+FoliageType_InstancedStaticMesh.Physics=True
+FoliageType_InstancedStaticMesh.Scalability=True
 
 [PlacementMode]
 RecentlyPlaced=/Game/Geometry/GrassClump.GrassClump;
