Tree design finished

--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -144,7 +144,7 @@ bFilterBSP=False
 [DetailCustomWidgetExpansion]
 LandscapeEditorObject=LandscapeEditorObject.Target Layers.TargetLayers,
 MaterialEditorInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Scalar Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Vector Parameter Values,
-MaterialInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Scalar Parameter Values,
+MaterialInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Scalar Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Vector Parameter Values,
 
 [ContentBrowser]
 ContentBrowserTab1.SelectedPaths=/Game/Geometry
@@ -176,7 +176,7 @@ AssetPropertyPicker.CurrentViewType=0
 LastLevel=/Game/Maps/Level_Chapter01
 
 [AssetEditorManager]
-CleanShutdown=True
+CleanShutdown=False
 
 [DetailCategories]
 BP_Sky_Sphere_C.TransformCommon=True
@@ -361,12 +361,12 @@ FbxImportUI.FbxFileInformation=False
 StaticMesh.StaticMeshMaterials=True
 StaticMesh.LODCustomMode=True
 StaticMesh.LOD0=True
-StaticMesh.LodSettings=True
-StaticMesh.StaticMesh=True
-StaticMesh.Collision=True
-StaticMesh.ImportSettings=True
-StaticMesh.EditableMesh=True
-StaticMesh.Navigation=True
+StaticMesh.LodSettings=False
+StaticMesh.StaticMesh=False
+StaticMesh.Collision=False
+StaticMesh.ImportSettings=False
+StaticMesh.EditableMesh=False
+StaticMesh.Navigation=False
 MaterialExpressionTextureCoordinate.MaterialExpressionTextureCoordinate=True
 MaterialExpressionTextureCoordinate.MaterialExpression=True
 MaterialExpressionVectorParameter.General=True
@@ -382,8 +382,16 @@ FoliageType_InstancedStaticMesh.Placement=True
 FoliageType_InstancedStaticMesh.InstanceSettings=True
 FoliageType_InstancedStaticMesh.Physics=True
 FoliageType_InstancedStaticMesh.Scalability=True
+InstancedFoliageActor.TransformCommon=True
+InstancedFoliageActor.Replication=True
+InstancedFoliageActor.Input=True
+InstancedFoliageActor.Actor=True
+MaterialExpressionReflectionVectorWS.UMaterialExpressionReflectionVectorWS=True
+MaterialExpressionReflectionVectorWS.MaterialExpression=True
+StaticMesh.LOD3=True
 
 [PlacementMode]
+RecentlyPlaced=/Game/Geometry/Tree.Tree;
 RecentlyPlaced=/Game/Geometry/GrassClump.GrassClump;
 RecentlyPlaced=/Game/Geometry/Rock.Rock;
 RecentlyPlaced=/Game/Geometry/firelogs.firelogs;
@@ -1063,26 +1071,26 @@ StaticMeshEditor.TimeStamp=2019.03.17-23.42.51
 StaticMeshEditor.LastCompileMethod=Unknown
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Maps/Level_Chapter01
-MRUItem1=/Game/Materials/M_Grass_Inst
-MRUItem2=/Game/Materials/M_GrassMaster
-MRUItem3=/Game/Geometry/GrassClump
-MRUItem4=/Game/Materials/M_BurnedWood
-MRUItem5=/Game/Geometry/firelogs
-MRUItem6=/Game/Materials/M_Rock
-MRUItem7=/Game/Geometry/Rock
-MRUItem8=/Engine/EngineMaterials/WorldGridMaterial
-MRUItem9=/Game/Materials/M_Window
-MRUItem10=/Game/Materials/M_Chimney
-MRUItem11=/Game/Materials/M_Door
-MRUItem12=/Game/Materials/M_Tiles
-MRUItem13=/Game/Materials/M_Beam
-MRUItem14=/Game/Materials/M_Lampert
-MRUItem15=/Game/Materials/M_Slats
-MRUItem16=/Game/Geometry/Cabin
-MRUItem17=/Game/Materials/M_Land
-MRUItem18=/Game/Materials/M_Landscape
-MRUItem19=/Game/Materials/M_Landscape_Practise_Inst
+MRUItem0=/Game/Materials/M_TreeFront
+MRUItem1=/Game/Materials/M_Branch
+MRUItem2=/Game/Materials/M_Bark
+MRUItem3=/Game/Geometry/Tree
+MRUItem4=/Game/Materials/M_Grass_Inst
+MRUItem5=/Game/Maps/Level_Chapter01
+MRUItem6=/Game/Materials/M_GrassMaster
+MRUItem7=/Game/Geometry/GrassClump
+MRUItem8=/Game/Materials/M_BurnedWood
+MRUItem9=/Game/Geometry/firelogs
+MRUItem10=/Game/Materials/M_Rock
+MRUItem11=/Game/Geometry/Rock
+MRUItem12=/Engine/EngineMaterials/WorldGridMaterial
+MRUItem13=/Game/Materials/M_Window
+MRUItem14=/Game/Materials/M_Chimney
+MRUItem15=/Game/Materials/M_Door
+MRUItem16=/Game/Materials/M_Tiles
+MRUItem17=/Game/Materials/M_Beam
+MRUItem18=/Game/Materials/M_Lampert
+MRUItem19=/Game/Materials/M_Slats
 
 [MessageLog]
 LastLogListing=PIE
@@ -1113,11 +1121,15 @@ bAlwaysRefreshAllPreviews=True
 /Game/Materials/M_Grass_Inst.M_Grass_Inst=1
 /Game/Materials/M_GrassMaster.M_GrassMaster=0
 /Game/Geometry/GrassClump.GrassClump=0
+/Game/Materials/M_Bark.M_Bark=0
+/Game/Materials/M_Branch.M_Branch=0
+/Game/Materials/M_TreeFront.M_TreeFront=0
+/Game/Geometry/Tree.Tree=0
 
 [MaterialInstanceEditor]
 bShowGrid=False
 bDrawGrid=False
-PrimType=3
+PrimType=1
 
 [/Script/UnrealEd.MaterialStatsOptions]
 bPlatformUsed[0]=1
@@ -1157,7 +1169,7 @@ bMaterialQualityUsed[1]=1
 bMaterialQualityUsed[2]=0
 
 [MaterialEditor]
-PrimType=3
+PrimType=1
 
 [DetailPropertyExpansion]
 MaterialExpressionLandscapeLayerBlend="\"Object.Layers\" "
@@ -1186,7 +1198,7 @@ bAutoGenerateCollision=False
 bCombineMeshes=False
 bTransformVertexToAbsolute=True
 bBakePivotInVertex=False
-bImportMeshLODs=False
+bImportMeshLODs=True
 NormalImportMethod=FBXNIM_ImportNormals
 NormalGenerationMethod=MikkTSpace
 ImportTranslation=(X=0.000000,Y=0.000000,Z=0.000000)
@@ -1254,5 +1266,9 @@ bConvertSceneUnit=False
 
 [SelectionDetails]
 PreserveScaleRatio=False
+
+[DetailCategoriesAdvanced]
+FbxImportUI.Mesh=True
+StaticMesh.LODCustomMode=True
 
 
