Trees placed on landscape finished

--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -136,7 +136,7 @@ bShowPaletteItemDetails=True
 bShowPaletteItemTooltips=True
 ActivePaletteViewMode=0
 PaletteThumbnailScale=0.300000
-Radius=522.271484
+Radius=716.142578
 PaintDensity=1.000000
 bFilterStaticMesh=False
 bFilterBSP=False
@@ -145,6 +145,7 @@ bFilterBSP=False
 LandscapeEditorObject=LandscapeEditorObject.Target Layers.TargetLayers,
 MaterialEditorInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Scalar Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Vector Parameter Values,
 MaterialInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Scalar Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Vector Parameter Values,
+StaticMesh=StaticMesh.LOD0.StaticMeshSectionListNameLOD_0,
 
 [ContentBrowser]
 ContentBrowserTab1.SelectedPaths=/Game/Geometry
