Environment Light adjusted

--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -390,6 +390,14 @@ InstancedFoliageActor.Actor=True
 MaterialExpressionReflectionVectorWS.UMaterialExpressionReflectionVectorWS=True
 MaterialExpressionReflectionVectorWS.MaterialExpression=True
 StaticMesh.LOD3=True
+SkyLight.TransformCommon=True
+SkyLight.Light=True
+SkyLight.Rendering=True
+SkyLight.DistanceFieldAmbientOcclusion=True
+SkyLight.SkyLight=True
+SkyLight.Tags=True
+SkyLight.Cooking=True
+SkyLight.Actor=True
 
 [PlacementMode]
 RecentlyPlaced=/Game/Geometry/Tree.Tree;
