Post Processing Volume finished

--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -146,6 +146,7 @@ LandscapeEditorObject=LandscapeEditorObject.Target Layers.TargetLayers,
 MaterialEditorInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Scalar Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Vector Parameter Values,
 MaterialInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Scalar Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Vector Parameter Values,
 StaticMesh=StaticMesh.LOD0.StaticMeshSectionListNameLOD_0,
+PostProcessVolume=PostProcessVolume.Color Grading.Color Grading|WhiteBalance,PostProcessVolume.Lens.Lens|Depth of FieldAdvanced,PostProcessVolume.Color Grading.Color Grading|Global,PostProcessVolume.Lens.Lens|BloomAdvanced,PostProcessVolume.Lens.Lens|Exposure,PostProcessVolume.Lens.Lens|ExposureAdvanced,PostProcessVolume.Lens.Lens|Chromatic Aberration,PostProcessVolume.Lens.Lens|Dirt Mask,PostProcessVolume.Lens.Lens|Camera,PostProcessVolume.Lens.Lens|Lens Flares,PostProcessVolume.Lens.Lens|Image Effects,PostProcessVolume.Lens.Lens|Depth of Field,PostProcessVolume.Lens.Lens|Bloom,
 
 [ContentBrowser]
 ContentBrowserTab1.SelectedPaths=/Game/Geometry
@@ -442,8 +443,21 @@ ExponentialHeightFog.Activation=True
 ExponentialHeightFog.Cooking=True
 ExponentialHeightFog.Replication=True
 ExponentialHeightFog.Actor=True
+PostProcessVolume.TransformCommon=True
+PostProcessVolume.Lens=True
+PostProcessVolume.Color Grading=True
+PostProcessVolume.Film=True
+PostProcessVolume.Mobile Tonemapper=True
+PostProcessVolume.Rendering Features=True
+PostProcessVolume.PostProcessVolumeSettings=True
+PostProcessVolume.BrushSettings=True
+PostProcessVolume.Replication=True
+PostProcessVolume.Actor=True
+PostProcessVolume.Cooking=True
+PostProcessVolume.LOD=True
 
 [PlacementMode]
+RecentlyPlaced=/Script/Engine.PostProcessVolume;/Engine/Transient.ActorFactoryBoxVolume_17
 RecentlyPlaced=/Script/Engine.ExponentialHeightFog;/Engine/Transient.ActorFactoryExponentialHeightFog_0
 RecentlyPlaced=/Script/Engine.PointLight;/Engine/Transient.ActorFactoryPointLight_0
 RecentlyPlaced=/Script/Engine.SpotLight;/Engine/Transient.ActorFactorySpotLight_0
@@ -1231,6 +1245,9 @@ PrimType=1
 MaterialExpressionLandscapeLayerBlend="\"Object.Layers\" "
 MaterialExpression=
 Object=
+PostProcessVolume="\"Object.PostProcessVolumeSettings.Settings.BloomDirtMaskTint\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints\" \"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
+Volume="\"Object.PostProcessVolumeSettings.Settings.BloomDirtMaskTint\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints\" \"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
+Brush="\"Object.PostProcessVolumeSettings.Settings.BloomDirtMaskTint\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints\" \"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 
 [/Script/UnrealEd.FbxImportUI]
 bImportMaterials=False
