Fire and smoke effect added

--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -455,8 +455,31 @@ PostProcessVolume.Replication=True
 PostProcessVolume.Actor=True
 PostProcessVolume.Cooking=True
 PostProcessVolume.LOD=True
+Blueprint_Effect_Fire_C.TransformCommon=True
+Blueprint_Effect_Fire_C.Rendering=True
+Blueprint_Effect_Fire_C.Replication=True
+Blueprint_Effect_Fire_C.Input=True
+Blueprint_Effect_Fire_C.Actor=True
+Blueprint_Effect_Fire_C.LOD=True
+Blueprint_Effect_Fire_C.Cooking=True
+Blueprint_Effect_Smoke_C.TransformCommon=True
+Blueprint_Effect_Smoke_C.Rendering=True
+Blueprint_Effect_Smoke_C.Replication=True
+Blueprint_Effect_Smoke_C.Input=True
+Blueprint_Effect_Smoke_C.Actor=True
+ParticleSystem.ParticleSystem=True
+ParticleSystem.Thumbnail=True
+ParticleSystem.LOD=True
+ParticleSystem.Bounds=True
+ParticleSystem.Delay=True
+ParticleSystem.Performance=True
+ParticleSystem.MacroUV=True
+ParticleSystem.Occlusion=True
+ParticleSystem.Materials=True
 
 [PlacementMode]
+RecentlyPlaced=/Game/StarterContent/Blueprints/Blueprint_Effect_Smoke.Blueprint_Effect_Smoke;
+RecentlyPlaced=/Game/StarterContent/Blueprints/Blueprint_Effect_Fire.Blueprint_Effect_Fire;
 RecentlyPlaced=/Script/Engine.PostProcessVolume;/Engine/Transient.ActorFactoryBoxVolume_17
 RecentlyPlaced=/Script/Engine.ExponentialHeightFog;/Engine/Transient.ActorFactoryExponentialHeightFog_0
 RecentlyPlaced=/Script/Engine.PointLight;/Engine/Transient.ActorFactoryPointLight_0
@@ -1141,26 +1164,26 @@ StaticMeshEditor.TimeStamp=2019.03.17-23.42.51
 StaticMeshEditor.LastCompileMethod=Unknown
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Materials/M_TreeFront
-MRUItem1=/Game/Materials/M_Branch
-MRUItem2=/Game/Materials/M_Bark
-MRUItem3=/Game/Geometry/Tree
-MRUItem4=/Game/Materials/M_Grass_Inst
-MRUItem5=/Game/Maps/Level_Chapter01
-MRUItem6=/Game/Materials/M_GrassMaster
-MRUItem7=/Game/Geometry/GrassClump
-MRUItem8=/Game/Materials/M_BurnedWood
-MRUItem9=/Game/Geometry/firelogs
-MRUItem10=/Game/Materials/M_Rock
-MRUItem11=/Game/Geometry/Rock
-MRUItem12=/Engine/EngineMaterials/WorldGridMaterial
-MRUItem13=/Game/Materials/M_Window
-MRUItem14=/Game/Materials/M_Chimney
-MRUItem15=/Game/Materials/M_Door
-MRUItem16=/Game/Materials/M_Tiles
-MRUItem17=/Game/Materials/M_Beam
-MRUItem18=/Game/Materials/M_Lampert
-MRUItem19=/Game/Materials/M_Slats
+MRUItem0=/Game/StarterContent/Particles/P_Smoke
+MRUItem1=/Game/Materials/M_TreeFront
+MRUItem2=/Game/Materials/M_Branch
+MRUItem3=/Game/Materials/M_Bark
+MRUItem4=/Game/Geometry/Tree
+MRUItem5=/Game/Materials/M_Grass_Inst
+MRUItem6=/Game/Maps/Level_Chapter01
+MRUItem7=/Game/Materials/M_GrassMaster
+MRUItem8=/Game/Geometry/GrassClump
+MRUItem9=/Game/Materials/M_BurnedWood
+MRUItem10=/Game/Geometry/firelogs
+MRUItem11=/Game/Materials/M_Rock
+MRUItem12=/Game/Geometry/Rock
+MRUItem13=/Engine/EngineMaterials/WorldGridMaterial
+MRUItem14=/Game/Materials/M_Window
+MRUItem15=/Game/Materials/M_Chimney
+MRUItem16=/Game/Materials/M_Door
+MRUItem17=/Game/Materials/M_Tiles
+MRUItem18=/Game/Materials/M_Beam
+MRUItem19=/Game/Materials/M_Lampert
 
 [MessageLog]
 LastLogListing=LightingResults
@@ -1195,6 +1218,7 @@ bAlwaysRefreshAllPreviews=True
 /Game/Materials/M_Branch.M_Branch=0
 /Game/Materials/M_TreeFront.M_TreeFront=0
 /Game/Geometry/Tree.Tree=0
+/Game/StarterContent/Particles/P_Smoke.P_Smoke=0
 
 [MaterialInstanceEditor]
 bShowGrid=False
@@ -1345,8 +1369,41 @@ OnlyBuildSelected=False
 OnlyBuildSelectedLevels=False
 OnlyBuildVisibility=False
 
+[/Script/UnrealEd.CascadeOptions]
+ModuleColor_Beam_Unselected=(B=235,G=150,R=160,A=0)
+ModuleColor_Beam_Selected=(B=0,G=100,R=255,A=0)
+ModuleColor_Trail_Unselected=(B=170,G=235,R=130,A=0)
+ModuleColor_Trail_Selected=(B=0,G=100,R=255,A=0)
+ModuleColor_Spawn_Unselected=(B=100,G=100,R=200,A=0)
+ModuleColor_Spawn_Selected=(B=50,G=50,R=255,A=0)
+ModuleColor_Light_Unselected=(B=49,G=40,R=90,A=0)
+ModuleColor_Light_Selected=(B=0,G=100,R=255,A=0)
+ModuleColor_SubUV_Unselected=(B=49,G=90,R=40,A=0)
+ModuleColor_SubUV_Selected=(B=100,G=200,R=50,A=0)
+ModuleColor_Required_Unselected=(B=100,G=200,R=200,A=0)
+ModuleColor_Required_Selected=(B=50,G=225,R=255,A=0)
+ModuleColor_Event_Unselected=(B=255,G=64,R=64,A=0)
+ModuleColor_Event_Selected=(B=255,G=0,R=0,A=0)
+GridColor_Hi=(B=255,G=100,R=0,A=0)
+GridColor_Low=(B=255,G=100,R=0,A=0)
+bShowParticleCounts=False
+bShowParticleEvents=False
+bShowParticleTimes=False
+bShowParticleDistance=False
+bShowParticleMemory=False
+ParticleMemoryUpdateTime=0.000000
+bShowFloor=False
+FloorMesh=/Engine/EditorMeshes/AnimTreeEd_PreviewFloor.AnimTreeEd_PreviewFloor
+FloorPosition=(X=0.000000,Y=0.000000,Z=0.000000)
+FloorRotation=(Pitch=0.000000,Yaw=0.000000,Roll=0.000000)
+FloorScale=1.000000
+FloorScale3D=(X=1.000000,Y=1.000000,Z=1.000000)
+
 [DetailCategoriesAdvanced]
 FbxImportUI.Mesh=True
 StaticMesh.LODCustomMode=True
+
+[CascadeEditor]
+LightDir=P=-44.999969 Y=-179.999969 R=0.000000
 
 
