--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -495,6 +495,7 @@ SkeletalMeshActor.Actor=True
 SkeletalMeshActor.SkeletalMesh=True
 
 [PlacementMode]
+RecentlyPlaced=/Game/Geometry/Crate1.Crate1;
 RecentlyPlaced=/Game/Geometry/Water_Tower_Scanline.Water_Tower_Scanline;
 RecentlyPlaced=/Game/AnimalVarietyPack/Pig/Meshes/SK_Pig_PhysicsAsset.SK_Pig_PhysicsAsset;
 RecentlyPlaced=/Game/AnimalVarietyPack/Pig/Meshes/SK_Pig.SK_Pig;
@@ -1184,26 +1185,26 @@ StaticMeshEditor.TimeStamp=2019.03.17-23.42.51
 StaticMeshEditor.LastCompileMethod=Unknown
 
 [ContentBrowserRecent]
-MRUItem0=/Game/StarterContent/Particles/P_Smoke
-MRUItem1=/Game/Materials/M_TreeFront
-MRUItem2=/Game/Materials/M_Branch
-MRUItem3=/Game/Materials/M_Bark
-MRUItem4=/Game/Geometry/Tree
-MRUItem5=/Game/Materials/M_Grass_Inst
-MRUItem6=/Game/Maps/Level_Chapter01
-MRUItem7=/Game/Materials/M_GrassMaster
-MRUItem8=/Game/Geometry/GrassClump
-MRUItem9=/Game/Materials/M_BurnedWood
-MRUItem10=/Game/Geometry/firelogs
-MRUItem11=/Game/Materials/M_Rock
-MRUItem12=/Game/Geometry/Rock
-MRUItem13=/Engine/EngineMaterials/WorldGridMaterial
-MRUItem14=/Game/Materials/M_Window
-MRUItem15=/Game/Materials/M_Chimney
-MRUItem16=/Game/Materials/M_Door
-MRUItem17=/Game/Materials/M_Tiles
-MRUItem18=/Game/Materials/M_Beam
-MRUItem19=/Game/Materials/M_Lampert
+MRUItem0=/Game/Materials/M_Crate
+MRUItem1=/Game/StarterContent/Particles/P_Smoke
+MRUItem2=/Game/Materials/M_TreeFront
+MRUItem3=/Game/Materials/M_Branch
+MRUItem4=/Game/Materials/M_Bark
+MRUItem5=/Game/Geometry/Tree
+MRUItem6=/Game/Materials/M_Grass_Inst
+MRUItem7=/Game/Maps/Level_Chapter01
+MRUItem8=/Game/Materials/M_GrassMaster
+MRUItem9=/Game/Geometry/GrassClump
+MRUItem10=/Game/Materials/M_BurnedWood
+MRUItem11=/Game/Geometry/firelogs
+MRUItem12=/Game/Materials/M_Rock
+MRUItem13=/Game/Geometry/Rock
+MRUItem14=/Engine/EngineMaterials/WorldGridMaterial
+MRUItem15=/Game/Materials/M_Window
+MRUItem16=/Game/Materials/M_Chimney
+MRUItem17=/Game/Materials/M_Door
+MRUItem18=/Game/Materials/M_Tiles
+MRUItem19=/Game/Materials/M_Beam
 
 [MessageLog]
 LastLogListing=FBXImport
@@ -1239,6 +1240,7 @@ bAlwaysRefreshAllPreviews=True
 /Game/Materials/M_TreeFront.M_TreeFront=0
 /Game/Geometry/Tree.Tree=0
 /Game/StarterContent/Particles/P_Smoke.P_Smoke=0
+/Game/Materials/M_Crate.M_Crate=0
 
 [MaterialInstanceEditor]
 bShowGrid=False
@@ -1311,7 +1313,7 @@ VertexColorImportOption=Ignore
 VertexOverrideColor=(B=255,G=255,R=255,A=255)
 bGenerateLightmapUVs=True
 bOneConvexHullPerUCX=True
-bAutoGenerateCollision=True
+bAutoGenerateCollision=False
 bCombineMeshes=False
 bTransformVertexToAbsolute=True
 bBakePivotInVertex=False
@@ -1425,5 +1427,8 @@ StaticMesh.LODCustomMode=True
 
 [CascadeEditor]
 LightDir=P=-44.999969 Y=-179.999969 R=0.000000
+
+[SuppressableDialogs]
+Warning_NoPreviewMeshFound=False
 
 
